Fix spacing

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -39,6 +39,6 @@ h3 {
 
 .logo {
   margin-top: 0;
-  text-align: center;
+  margin-bottom: 0;
 }
 
